--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,28 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:srcCompat="@drawable/krolik1"
+        tools:layout_editor_absoluteX="58dp"
+        tools:layout_editor_absoluteY="178dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton5"
+        android:layout_width="188dp"
+        android:layout_height="192dp"
+        app:srcCompat="@drawable/s1"
+        tools:layout_editor_absoluteX="-1dp"
+        tools:layout_editor_absoluteY="536dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton7"
+        android:layout_width="219dp"
+        android:layout_height="248dp"
+        app:srcCompat="@drawable/k2"
+        tools:layout_editor_absoluteX="187dp"
+        tools:layout_editor_absoluteY="480dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
